# encontreras

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  start.bat  start.command
.cursor/rules/: agent-context.mdc
scripts/: project_health.py
src/: pipeline.py
src/core/: ai_synthesis.py  config.py  context_loader.py  database.py  entity_resolution.py  exporter.py  lead_scorer.py  models.py  notion_sync.py  semantic_filter.py  tasks.py
src/extractors/: google_maps.py  social.py  website.py
src/web/: webhooks.py
tests/: conftest.py  test_entity_resolution.py  test_exporter.py  test_lead_scorer.py  test_models.py
web/: app.js  how-it-works.html  index.html  server.py  style.css
