[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "encontreras"
version = "0.1.0"
description = "CLI tool to extract business data from Google Maps with cascade enrichment and entity resolution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
    "playwright>=1.40.0",
    "pandas>=2.1.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "notion-client>=2.2.1",
    "google-genai>=0.2.0",
    "python-dotenv>=1.0.0",
    "hupper>=1.12.0",
    "huey>=2.5.0"
]

[project.scripts]
encontreras = "main:app"

[tool.setuptools.packages.find]
where = ["."]
